force-app/main/default/objects/e_Order_API__c/e_Order_API__c.object-meta.xml
<CustomObject>
    <label>e Order</label>
    <nameField>
        <label>e Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>e Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>