force-app/main/default/objects/e_Order_API__c/fields/Customer_Name_API__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_API__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>e_Customer_API__c</referenceTo>
    <relationshipLabel>e Orders</relationshipLabel>
    <relationshipName>e_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>