force-app/main/default/objects/e_Order_API__c/fields/Invois_id_API__c.field-meta.xml
<CustomField>
    <fullName>Invois_id_API__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invois id</label>
    <referenceTo>e_Invois_API__c</referenceTo>
    <relationshipLabel>e Orders</relationshipLabel>
    <relationshipName>e_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>