force-app/main/default/objects/e_Order_API__c/fields/Product_Name_API__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_API__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>e_Product_API__c</referenceTo>
    <relationshipLabel>e Orders</relationshipLabel>
    <relationshipName>e_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>