force-app/main/default/objects/e_Order_API__c/recordTypes/winterfell_API.recordType-meta.xml
<RecordType>
    <fullName>winterfell_API</fullName>
    <active>true</active>
    <description>(#5312 automationMaster 19.5.0.0-SNAPSHOT-13302), 2 days 14 hr ago</description>
    <label>winterfell</label>
</RecordType>